--- a/main.css
+++ b/main.css
@@ -25,3 +25,10 @@ a:hover {
     color:inherit;
     cursor:pointer;
 }
+
+.jumbotron-main {
+    background-image: url("./images/main-000.jpg");
+    background-position: 0% 25%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
