Fixed minor css bugs

--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ a:hover {
 }
 
 .jumbotron-main {
-    background-image: url("./images/main-000.jpg");
+    background-image: url("/images/main-000.jpg");
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
